ENH: further development

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!--========================================================================
     -->
-    <div id="ball" class="sqr rn2 bd2 box abs"></div>
+    <div id="ball" class="sqr rn2 bd3 box abs"></div>
 
     <div id="trigger" class="cnt rn2 bd2 sh0 box abs">
       <div class="cnt rn2 bd2 sh1 box">
@@ -58,183 +58,183 @@
 
     <!--========================================================================
     -->
-    <div class="ath sqr abs cnt">
-      <svg id="minT00" width="42px" height="42px">
-        <rect id="minT00" width="6" height="6" x="14" y="25"/>
-        <rect id="minT00" width="6" height="6" x="14" y="18"/>
-        <rect id="minT00" width="6" height="6" x="21" y="18"/>
-        <rect id="minT00" width="6" height="6" x="21" y="11"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 0 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="14" y="25"/>
+        <rect width="6" height="6" x="14" y="18"/>
+        <rect width="6" height="6" x="21" y="18"/>
+        <rect width="6" height="6" x="21" y="11"/>
       </svg>
     </div>
 
-    <div class="ath sqr abs cnt">
-      <svg id="minT01" width="42px" height="42px">
-        <rect id="minT01" width="6" height="6" x="14" y="11"/>
-        <rect id="minT01" width="6" height="6" x="21" y="18"/>
-        <rect id="minT01" width="6" height="6" x="21" y="25"/>
-        <rect id="minT01" width="6" height="6" x="14" y="25"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 1 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="14" y="11"/>
+        <rect width="6" height="6" x="21" y="18"/>
+        <rect width="6" height="6" x="21" y="25"/>
+        <rect width="6" height="6" x="14" y="25"/>
       </svg>
     </div>
 
-    <div class="ath sqr abs cnt">
-      <svg id="minT02" width="42px" height="42px">
-        <rect id="minT02" width="6" height="6" x="14" y="25"/>
-        <rect id="minT02" width="6" height="6" x="21" y="25"/>
-        <rect id="minT02" width="6" height="6" x="21" y="18"/>
-        <rect id="minT02" width="6" height="6" x="21" y="11"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 2 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="14" y="25"/>
+        <rect width="6" height="6" x="21" y="25"/>
+        <rect width="6" height="6" x="21" y="18"/>
+        <rect width="6" height="6" x="21" y="11"/>
       </svg>
     </div>
 
-    <div class="ath sqr abs cnt">
-      <svg id="minT03" width="42px" height="42px">
-        <rect id="minT03" width="6" height="6" x="25" y="11"/>
-        <rect id="minT03" width="6" height="6" x="18" y="18"/>
-        <rect id="minT03" width="6" height="6" x="18" y="25"/>
-        <rect id="minT03" width="6" height="6" x="11" y="25"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 3 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="25" y="11"/>
+        <rect width="6" height="6" x="18" y="18"/>
+        <rect width="6" height="6" x="18" y="25"/>
+        <rect width="6" height="6" x="11" y="25"/>
       </svg>
     </div>
 
-    <div class="ath sqr abs cnt">
-      <svg id="minT04" width="42px" height="42px">
-        <rect id="minT04" width="6" height="6" x="21" y="11"/>
-        <rect id="minT04" width="6" height="6" x="21" y="18"/>
-        <rect id="minT04" width="6" height="6" x="21" y="25"/>
-        <rect id="minT04" width="6" height="6" x="14" y="18"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 4 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="21" y="11"/>
+        <rect width="6" height="6" x="21" y="18"/>
+        <rect width="6" height="6" x="21" y="25"/>
+        <rect width="6" height="6" x="14" y="18"/>
       </svg>
     </div>
 
-    <div class="ath sqr abs cnt">
-      <svg id="minT05" width="42px" height="42px">
-        <rect id="minT05" width="6" height="6" x="11" y="25"/>
-        <rect id="minT05" width="6" height="6" x="11" y="18"/>
-        <rect id="minT05" width="6" height="6" x="18" y="11"/>
-        <rect id="minT05" width="6" height="6" x="25" y="18"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 5 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="11" y="25"/>
+        <rect width="6" height="6" x="11" y="18"/>
+        <rect width="6" height="6" x="18" y="11"/>
+        <rect width="6" height="6" x="25" y="18"/>
       </svg>
     </div>
 
-    <div class="ath sqr abs cnt">
-      <svg id="minT06" width="42px" height="42px">
-        <rect id="minT06" width="6" height="6" x="11" y="11"/>
-        <rect id="minT06" width="6" height="6" x="18" y="25"/>
-        <rect id="minT06" width="6" height="6" x="25" y="18"/>
-        <rect id="minT06" width="6" height="6" x="18" y="18"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 6 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="11" y="11"/>
+        <rect width="6" height="6" x="18" y="25"/>
+        <rect width="6" height="6" x="25" y="18"/>
+        <rect width="6" height="6" x="18" y="18"/>
       </svg>
     </div>
 
-    <div class="ath sqr abs cnt">
-      <svg id="minT07" width="42px" height="42px">
-        <rect id="minT07" width="6" height="6" x="24" y="8"/>
-        <rect id="minT07" width="6" height="6" x="17" y="15"/>
-        <rect id="minT07" width="6" height="6" x="10" y="22"/>
-        <rect id="minT07" width="6" height="6" x="17" y="29"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 7 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="24" y="8"/>
+        <rect width="6" height="6" x="17" y="15"/>
+        <rect width="6" height="6" x="10" y="22"/>
+        <rect width="6" height="6" x="17" y="29"/>
       </svg>
     </div>
 
-    <div class="ath sqr abs cnt">
-      <svg id="minT08" width="42px" height="42px">
-        <rect id="minT08" width="6" height="6" x="14" y="28"/>
-        <rect id="minT08" width="6" height="6" x="21" y="7"/>
-        <rect id="minT08" width="6" height="6" x="21" y="14"/>
-        <rect id="minT08" width="6" height="6" x="14" y="21"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 8 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="14" y="28"/>
+        <rect width="6" height="6" x="21" y="7"/>
+        <rect width="6" height="6" x="21" y="14"/>
+        <rect width="6" height="6" x="14" y="21"/>
       </svg>
     </div>
 
-    <div class="ath sqr abs cnt">
-      <svg id="minT09" width="42px" height="42px">
-        <rect id="minT09" width="6" height="6" x="14" y="28"/>
-        <rect id="minT09" width="6" height="6" x="21" y="8"/>
-        <rect id="minT09" width="6" height="6" x="21" y="21"/>
-        <rect id="minT09" width="6" height="6" x="14" y="14"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 9 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="14" y="28"/>
+        <rect width="6" height="6" x="21" y="7"/>
+        <rect width="6" height="6" x="21" y="21"/>
+        <rect width="6" height="6" x="14" y="14"/>
       </svg>
     </div>
 
-    <div class="ath sqr abs cnt">
-      <svg id="minT10" width="42px" height="42px">
-        <rect id="minT10" width="6" height="6" x="21" y="8"/>
-        <rect id="minT10" width="6" height="6" x="14" y="28"/>
-        <rect id="minT10" width="6" height="6" x="14" y="21"/>
-        <rect id="minT10" width="6" height="6" x="14" y="14"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 10 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="21" y="7"/>
+        <rect width="6" height="6" x="14" y="28"/>
+        <rect width="6" height="6" x="14" y="21"/>
+        <rect width="6" height="6" x="14" y="14"/>
       </svg>
     </div>
 
-    <div class="ath sqr abs cnt">
-      <svg id="minT11" width="42px" height="42px">
-        <rect id="minT11" width="6" height="6" x="25" y="8"/>
-        <rect id="minT11" width="6" height="6" x="11" y="28"/>
-        <rect id="minT11" width="6" height="6" x="11" y="21"/>
-        <rect id="minT11" width="6" height="6" x="18" y="14"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 11 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="25" y="7"/>
+        <rect width="6" height="6" x="11" y="28"/>
+        <rect width="6" height="6" x="11" y="21"/>
+        <rect width="6" height="6" x="18" y="14"/>
       </svg>
     </div>
 
-    <div class="ath sqr abs cnt">
-      <svg id="minT12" width="42px" height="42px">
-        <rect id="minT12" width="6" height="6" x="25" y="8"/>
-        <rect id="minT12" width="6" height="6" x="18" y="15"/>
-        <rect id="minT12" width="6" height="6" x="18" y="22"/>
-        <rect id="minT12" width="6" height="6" x="11" y="29"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 12 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="25" y="8"/>
+        <rect width="6" height="6" x="18" y="15"/>
+        <rect width="6" height="6" x="18" y="22"/>
+        <rect width="6" height="6" x="11" y="29"/>
       </svg>
     </div>
 
-    <div class="ath sqr abs cnt">
-      <svg id="minT13" width="42px" height="42px">
-        <rect id="minT13" width="6" height="6" x="7" y="8"/>
-        <rect id="minT13" width="6" height="6" x="14" y="15"/>
-        <rect id="minT13" width="6" height="6" x="21" y="22"/>
-        <rect id="minT13" width="6" height="6" x="28" y="29"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 13 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="7" y="8"/>
+        <rect width="6" height="6" x="14" y="15"/>
+        <rect width="6" height="6" x="21" y="22"/>
+        <rect width="6" height="6" x="28" y="29"/>
       </svg>
     </div>
 
-    <div class="ath sqr abs cnt">
-      <svg id="minT14" width="42px" height="42px">
-        <rect id="minT14" width="6" height="6" x="21" y="28"/>
-        <rect id="minT14" width="6" height="6" x="21" y="7"/>
-        <rect id="minT14" width="6" height="6" x="21" y="14"/>
-        <rect id="minT14" width="6" height="6" x="14" y="21"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 14 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="21" y="28"/>
+        <rect width="6" height="6" x="21" y="7"/>
+        <rect width="6" height="6" x="21" y="14"/>
+        <rect width="6" height="6" x="14" y="21"/>
       </svg>
     </div>
 
-    <div class="ath sqr abs cnt">
-      <svg id="minT15" width="42px" height="42px">
-        <rect id="minT15" width="6" height="6" x="21" y="28"/>
-        <rect id="minT15" width="6" height="6" x="21" y="7"/>
-        <rect id="minT15" width="6" height="6" x="14" y="14"/>
-        <rect id="minT15" width="6" height="6" x="14" y="21"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 15 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="21" y="28"/>
+        <rect width="6" height="6" x="21" y="7"/>
+        <rect width="6" height="6" x="14" y="14"/>
+        <rect width="6" height="6" x="14" y="21"/>
       </svg>
     </div>
 
-    <div class="ath sqr abs cnt">
-      <svg id="minT16" width="42px" height="42px">
-        <rect id="minT16" width="6" height="6" x="18" y="28"/>
-        <rect id="minT16" width="6" height="6" x="18" y="7"/>
-        <rect id="minT16" width="6" height="6" x="18" y="14"/>
-        <rect id="minT16" width="6" height="6" x="18" y="21"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 16 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="18" y="28"/>
+        <rect width="6" height="6" x="18" y="7"/>
+        <rect width="6" height="6" x="18" y="14"/>
+        <rect width="6" height="6" x="18" y="21"/>
       </svg>
     </div>
 
-    <div class="ath sqr abs cnt">
-      <svg id="minT17" width="42px" height="42px">
-        <rect id="minT17" width="6" height="6" x="11" y="11"/>
-        <rect id="minT17" width="6" height="6" x="18" y="11"/>
-        <rect id="minT17" width="6" height="6" x="25" y="25"/>
-        <rect id="minT17" width="6" height="6" x="25" y="18"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 17 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="11" y="11"/>
+        <rect width="6" height="6" x="18" y="11"/>
+        <rect width="6" height="6" x="25" y="25"/>
+        <rect width="6" height="6" x="25" y="18"/>
       </svg>
     </div>
 
-    <div class="ath sqr abs cnt">
-      <svg id="minT18" width="42px" height="42px">
-        <rect id="minT18" width="6" height="6" x="14" y="14"/>
-        <rect id="minT18" width="6" height="6" x="21" y="14"/>
-        <rect id="minT18" width="6" height="6" x="14" y="21"/>
-        <rect id="minT18" width="6" height="6" x="21" y="21"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 18 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="14" y="14"/>
+        <rect width="6" height="6" x="21" y="14"/>
+        <rect width="6" height="6" x="14" y="21"/>
+        <rect width="6" height="6" x="21" y="21"/>
       </svg>
     </div>
 
-    <div class="ath sqr abs cnt">
-      <svg id="minT19" width="42px" height="42px">
-        <rect id="minT19" width="6" height="6" x="25" y="18"/>
-        <rect id="minT19" width="6" height="6" x="18" y="11"/>
-        <rect id="minT19" width="6" height="6" x="11" y="18"/>
-        <rect id="minT19" width="6" height="6" x="18" y="25"/>
+    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 19 -->
+      <svg width="42px" height="42px">
+        <rect width="6" height="6" x="25" y="18"/>
+        <rect width="6" height="6" x="18" y="11"/>
+        <rect width="6" height="6" x="11" y="18"/>
+        <rect width="6" height="6" x="18" y="25"/>
       </svg>
     </div>
 
@@ -593,11 +593,11 @@
       </div>
     </div><!-- end clock -->
 
-    <div id="console" class="cnt flt bd1 box dsp rn1 fml">CONSOLE</div>
+    <div id="console" class="cnt flt bd2 box dsp rn1 fml">CONSOLE</div>
 
-    <div id="yes" class="cnt yon flt bd1 box btn rn1 fml">YES</div>
-    <div id="reset" class="cnt flt bd1 box btn rn1 fml">RESET</div>
-    <div id="no" class="cnt yon flt bd1 box btn rn1 fml">NO</div>
+    <div id="yes" class="cnt yon flt bd2 box btn rn1 fml">YES</div>
+    <div id="reset" class="cnt flt bd2 box btn rn1 fml">RESET</div>
+    <div id="no" class="cnt yon flt bd2 box btn rn1 fml">NO</div>
 
   </div><!-- end arena -->
 
