ENH: better reset visuals

--- a/index.html
+++ b/index.html
@@ -58,184 +58,204 @@
 
     <!--========================================================================
     -->
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 0 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="14" y="25"/>
         <rect width="6" height="6" x="14" y="18"/>
         <rect width="6" height="6" x="21" y="18"/>
         <rect width="6" height="6" x="21" y="11"/>
       </svg>
+      <div id="T00" class="sqr abs rn2"></div>
     </div>
 
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 1 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="14" y="11"/>
         <rect width="6" height="6" x="21" y="18"/>
         <rect width="6" height="6" x="21" y="25"/>
         <rect width="6" height="6" x="14" y="25"/>
       </svg>
+      <div id="T01" class="sqr abs rn2"></div>
     </div>
 
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 2 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="14" y="25"/>
         <rect width="6" height="6" x="21" y="25"/>
         <rect width="6" height="6" x="21" y="18"/>
         <rect width="6" height="6" x="21" y="11"/>
       </svg>
+      <div id="T02" class="sqr abs rn2"></div>
     </div>
 
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 3 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="25" y="11"/>
         <rect width="6" height="6" x="18" y="18"/>
         <rect width="6" height="6" x="18" y="25"/>
         <rect width="6" height="6" x="11" y="25"/>
       </svg>
+      <div id="T03" class="sqr abs rn2"></div>
     </div>
 
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 4 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="21" y="11"/>
         <rect width="6" height="6" x="21" y="18"/>
         <rect width="6" height="6" x="21" y="25"/>
         <rect width="6" height="6" x="14" y="18"/>
       </svg>
+      <div id="T04" class="sqr abs rn2"></div>
     </div>
 
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 5 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="11" y="25"/>
         <rect width="6" height="6" x="11" y="18"/>
         <rect width="6" height="6" x="18" y="11"/>
         <rect width="6" height="6" x="25" y="18"/>
       </svg>
+      <div id="T05" class="sqr abs rn2"></div>
     </div>
 
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 6 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="11" y="11"/>
         <rect width="6" height="6" x="18" y="25"/>
         <rect width="6" height="6" x="25" y="18"/>
         <rect width="6" height="6" x="18" y="18"/>
       </svg>
+      <div id="T06" class="sqr abs rn2"></div>
     </div>
 
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 7 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="24" y="8"/>
         <rect width="6" height="6" x="17" y="15"/>
         <rect width="6" height="6" x="10" y="22"/>
         <rect width="6" height="6" x="17" y="29"/>
       </svg>
+      <div id="T07" class="sqr abs rn2"></div>
     </div>
 
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 8 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="14" y="28"/>
         <rect width="6" height="6" x="21" y="7"/>
         <rect width="6" height="6" x="21" y="14"/>
         <rect width="6" height="6" x="14" y="21"/>
       </svg>
+      <div id="T08" class="sqr abs rn2"></div>
     </div>
 
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 9 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="14" y="28"/>
         <rect width="6" height="6" x="21" y="7"/>
         <rect width="6" height="6" x="21" y="21"/>
         <rect width="6" height="6" x="14" y="14"/>
       </svg>
+      <div id="T09" class="sqr abs rn2"></div>
     </div>
 
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 10 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="21" y="7"/>
         <rect width="6" height="6" x="14" y="28"/>
         <rect width="6" height="6" x="14" y="21"/>
         <rect width="6" height="6" x="14" y="14"/>
       </svg>
+      <div id="T10" class="sqr abs rn2"></div>
     </div>
 
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 11 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="25" y="7"/>
         <rect width="6" height="6" x="11" y="28"/>
         <rect width="6" height="6" x="11" y="21"/>
         <rect width="6" height="6" x="18" y="14"/>
       </svg>
+      <div id="T11" class="sqr abs rn2"></div>
     </div>
 
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 12 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="25" y="8"/>
         <rect width="6" height="6" x="18" y="15"/>
         <rect width="6" height="6" x="18" y="22"/>
         <rect width="6" height="6" x="11" y="29"/>
       </svg>
+      <div id="T12" class="sqr abs rn2"></div>
     </div>
 
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 13 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="7" y="8"/>
         <rect width="6" height="6" x="14" y="15"/>
         <rect width="6" height="6" x="21" y="22"/>
         <rect width="6" height="6" x="28" y="29"/>
       </svg>
+      <div id="T13" class="sqr abs rn2"></div>
     </div>
 
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 14 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="21" y="28"/>
         <rect width="6" height="6" x="21" y="7"/>
         <rect width="6" height="6" x="21" y="14"/>
         <rect width="6" height="6" x="14" y="21"/>
       </svg>
+      <div id="T14" class="sqr abs rn2"></div>
     </div>
 
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 15 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="21" y="28"/>
         <rect width="6" height="6" x="21" y="7"/>
         <rect width="6" height="6" x="14" y="14"/>
         <rect width="6" height="6" x="14" y="21"/>
       </svg>
+      <div id="T15" class="sqr abs rn2"></div>
     </div>
 
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 16 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="18" y="28"/>
         <rect width="6" height="6" x="18" y="7"/>
         <rect width="6" height="6" x="18" y="14"/>
         <rect width="6" height="6" x="18" y="21"/>
       </svg>
+      <div id="T16" class="sqr abs rn2"></div>
     </div>
 
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 17 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="11" y="11"/>
         <rect width="6" height="6" x="18" y="11"/>
         <rect width="6" height="6" x="25" y="25"/>
         <rect width="6" height="6" x="25" y="18"/>
       </svg>
+      <div id="T17" class="sqr abs rn2"></div>
     </div>
 
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 18 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="14" y="14"/>
         <rect width="6" height="6" x="21" y="14"/>
         <rect width="6" height="6" x="14" y="21"/>
         <rect width="6" height="6" x="21" y="21"/>
       </svg>
+      <div id="T18" class="sqr abs rn2"></div>
     </div>
 
-    <div class="ath sqr rn2 bd3 box abs cnt btn"><!-- 19 -->
-      <svg width="42px" height="42px">
+    <div class="ath sqr rn2 bd3 box abs cnt btn">
+      <svg class="rn2" width="42px" height="42px">
         <rect width="6" height="6" x="25" y="18"/>
         <rect width="6" height="6" x="18" y="11"/>
         <rect width="6" height="6" x="11" y="18"/>
         <rect width="6" height="6" x="18" y="25"/>
       </svg>
+      <div id="T19" class="sqr abs rn2"></div>
     </div>
 
     <!--========================================================================
@@ -595,9 +615,9 @@
 
     <div id="console" class="cnt flt bd2 box dsp rn1 fml">CONSOLE</div>
 
-    <div id="yes" class="cnt yon flt bd2 box btn rn1 fml">YES</div>
-    <div id="reset" class="cnt flt bd2 box btn rn1 fml">RESET</div>
-    <div id="no" class="cnt yon flt bd2 box btn rn1 fml">NO</div>
+    <div id="yes" class="cnt yon flt bd2 box dsp rn1 fml tra"></div>
+    <div id="reset" class="cnt flt bd2 box btn fml tra">RESET</div>
+    <div id="no" class="cnt yon flt bd2 box dsp rn1 fml tra"></div>
 
   </div><!-- end arena -->
 
