ENH: further development

--- a/index.html
+++ b/index.html
@@ -576,35 +576,35 @@
     <div class="spc flt"></div>
 
     <div id="clock" class="flt">
-      <div class="trn cnt rn2 bd2 sh0 box flt">
+      <div class="bnc cnt rn2 bd2 sh0 box flt">
         <div class="cnt rn2 bd2 sh1 box">
           <div class="cnt rn2 bd2 sh2 box">
             <div class="cnt rn2 bd2 sh3 box"></div>
           </div>
         </div>
       </div>
-      <div class="trn cnt rn2 bd2 sh0 box flt">
+      <div class="bnc cnt rn2 bd2 sh0 box flt">
         <div class="cnt rn2 bd2 sh1 box">
           <div class="cnt rn2 bd2 sh2 box">
             <div class="cnt rn2 bd2 sh3 box"></div>
           </div>
         </div>
       </div>
-      <div class="trn cnt rn2 bd2 sh0 box flt">
+      <div class="bnc cnt rn2 bd2 sh0 box flt">
         <div class="cnt rn2 bd2 sh1 box">
           <div class="cnt rn2 bd2 sh2 box">
             <div class="cnt rn2 bd2 sh3 box"></div>
           </div>
         </div>
       </div>
-      <div class="trn cnt rn2 bd2 sh0 box flt">
+      <div class="bnc cnt rn2 bd2 sh0 box flt">
         <div class="cnt rn2 bd2 sh1 box">
           <div class="cnt rn2 bd2 sh2 box">
             <div class="cnt rn2 bd2 sh3 box"></div>
           </div>
         </div>
       </div>
-      <div class="trn cnt rn2 bd2 sh0 box flt">
+      <div class="bnc cnt rn2 bd2 sh0 box flt">
         <div class="cnt rn2 bd2 sh1 box">
           <div class="cnt rn2 bd2 sh2 box">
             <div class="cnt rn2 bd2 sh3 box"></div>
@@ -613,11 +613,11 @@
       </div>
     </div><!-- end clock -->
 
-    <div id="console" class="cnt flt bd2 box dsp rn1 fml">CONSOLE</div>
+    <div id="console" class="cnt flt bd1 box dsp rn1 fml">CONSOLE</div>
 
-    <div id="yes" class="cnt yon flt bd2 box dsp rn1 fml tra"></div>
-    <div id="reset" class="cnt flt bd2 box btn fml tra">RESET</div>
-    <div id="no" class="cnt yon flt bd2 box dsp rn1 fml tra"></div>
+    <div id="yes" class="cnt yon flt bd1 box dsp rn1 fml tra"></div>
+    <div id="reset" class="cnt flt bd1 box btn fml tra">RESET</div>
+    <div id="no" class="cnt yon flt bd1 box dsp rn1 fml tra"></div>
 
   </div><!-- end arena -->
 
