--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <rect width="6" height="6" x="21" y="18"/>
         <rect width="6" height="6" x="21" y="11"/>
       </svg>
-      <div id="T00" class="sqr abs rn2"></div>
+      <div id="T00" class="sqr abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -75,7 +75,7 @@
         <rect width="6" height="6" x="21" y="25"/>
         <rect width="6" height="6" x="14" y="25"/>
       </svg>
-      <div id="T01" class="sqr abs rn2"></div>
+      <div id="T01" class="sqr abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -85,7 +85,7 @@
         <rect width="6" height="6" x="21" y="18"/>
         <rect width="6" height="6" x="21" y="11"/>
       </svg>
-      <div id="T02" class="sqr abs rn2"></div>
+      <div id="T02" class="sqr abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -95,7 +95,7 @@
         <rect width="6" height="6" x="18" y="25"/>
         <rect width="6" height="6" x="11" y="25"/>
       </svg>
-      <div id="T03" class="sqr abs rn2"></div>
+      <div id="T03" class="sqr abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -105,7 +105,7 @@
         <rect width="6" height="6" x="21" y="25"/>
         <rect width="6" height="6" x="14" y="18"/>
       </svg>
-      <div id="T04" class="sqr abs rn2"></div>
+      <div id="T04" class="sqr abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -115,7 +115,7 @@
         <rect width="6" height="6" x="18" y="11"/>
         <rect width="6" height="6" x="25" y="18"/>
       </svg>
-      <div id="T05" class="sqr abs rn2"></div>
+      <div id="T05" class="sqr abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -125,7 +125,7 @@
         <rect width="6" height="6" x="25" y="18"/>
         <rect width="6" height="6" x="18" y="18"/>
       </svg>
-      <div id="T06" class="sqr abs rn2"></div>
+      <div id="T06" class="sqr abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -135,7 +135,7 @@
         <rect width="6" height="6" x="10" y="22"/>
         <rect width="6" height="6" x="17" y="29"/>
       </svg>
-      <div id="T07" class="sqr abs rn2"></div>
+      <div id="T07" class="sqr abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -145,7 +145,7 @@
         <rect width="6" height="6" x="21" y="14"/>
         <rect width="6" height="6" x="14" y="21"/>
       </svg>
-      <div id="T08" class="sqr abs rn2"></div>
+      <div id="T08" class="sqr abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -155,7 +155,7 @@
         <rect width="6" height="6" x="21" y="21"/>
         <rect width="6" height="6" x="14" y="14"/>
       </svg>
-      <div id="T09" class="sqr abs rn2"></div>
+      <div id="T09" class="sqr abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -165,7 +165,7 @@
         <rect width="6" height="6" x="14" y="21"/>
         <rect width="6" height="6" x="14" y="14"/>
       </svg>
-      <div id="T10" class="sqr abs rn2"></div>
+      <div id="T10" class="sqr abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -175,7 +175,7 @@
         <rect width="6" height="6" x="11" y="21"/>
         <rect width="6" height="6" x="18" y="14"/>
       </svg>
-      <div id="T11" class="sqr abs rn2"></div>
+      <div id="T11" class="sqr abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -185,7 +185,7 @@
         <rect width="6" height="6" x="18" y="22"/>
         <rect width="6" height="6" x="11" y="29"/>
       </svg>
-      <div id="T12" class="sqr abs rn2"></div>
+      <div id="T12" class="sqr abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -195,7 +195,7 @@
         <rect width="6" height="6" x="21" y="22"/>
         <rect width="6" height="6" x="28" y="29"/>
       </svg>
-      <div id="T13" class="sqr abs rn2"></div>
+      <div id="T13" class="sqr abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -205,7 +205,7 @@
         <rect width="6" height="6" x="21" y="14"/>
         <rect width="6" height="6" x="14" y="21"/>
       </svg>
-      <div id="T14" class="sqr abs rn2"></div>
+      <div id="T14" class="sqr abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -215,7 +215,7 @@
         <rect width="6" height="6" x="14" y="14"/>
         <rect width="6" height="6" x="14" y="21"/>
       </svg>
-      <div id="T15" class="sqr abs rn2"></div>
+      <div id="T15" class="sqr abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -225,7 +225,7 @@
         <rect width="6" height="6" x="18" y="14"/>
         <rect width="6" height="6" x="18" y="21"/>
       </svg>
-      <div id="T16" class="sqr abs rn2"></div>
+      <div id="T16" class="sqr abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -235,7 +235,7 @@
         <rect width="6" height="6" x="25" y="25"/>
         <rect width="6" height="6" x="25" y="18"/>
       </svg>
-      <div id="T17" class="sqr abs rn2"></div>
+      <div id="T17" class="sqr abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -245,7 +245,7 @@
         <rect width="6" height="6" x="14" y="21"/>
         <rect width="6" height="6" x="21" y="21"/>
       </svg>
-      <div id="T18" class="sqr abs rn2"></div>
+      <div id="T18" class="sqr abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -255,7 +255,7 @@
         <rect width="6" height="6" x="11" y="18"/>
         <rect width="6" height="6" x="18" y="25"/>
       </svg>
-      <div id="T19" class="sqr abs rn2"></div>
+      <div id="T19" class="sqr abs rn2 sfx"></div>
     </div>
 
     <!--========================================================================
