ENH: further development

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!--========================================================================
     -->
-    <div id="ball" class="sqr rn2 bd3 box abs"></div>
+    <div id="ball" class="sqr rn2 bd3 box abs bal tr2"></div>
 
     <div id="trigger" class="cnt rn2 bd2 sh0 box abs">
       <div class="cnt rn2 bd2 sh1 box">
@@ -615,9 +615,9 @@
 
     <div id="console" class="cnt flt bd1 box dsp rn1 fml">CONSOLE</div>
 
-    <div id="no" class="cnt yon flt bd1 box dsp rn1 fml tra"></div>
-    <div id="reset" class="cnt flt bd1 box btn fml tra">RESET</div>
-    <div id="yes" class="cnt yon flt bd1 box dsp rn1 fml tra"></div>
+    <div id="no" class="cnt yon flt bd1 box dsp rn1 fml tr1"></div>
+    <div id="reset" class="cnt flt bd1 box btn fml tr1">RESET</div>
+    <div id="yes" class="cnt yon flt bd1 box dsp rn1 fml tr1"></div>
 
   </div><!-- end arena -->
 
