ENH: displaying zones

--- a/index.html
+++ b/index.html
@@ -633,6 +633,7 @@
 
 <script type="text/javascript" src="tool.js"></script>
 <script type="text/javascript" src="update.js"></script>
+<script type="text/javascript" src="zone.js"></script>
 <script type="text/javascript" src="hover.js"></script>
 <script type="text/javascript" src="click.js"></script>
 <script type="text/javascript" src="press.js"></script>
