--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
 
     <!--========================================================================
     -->
-    <div class="zon sqr abs box rn2"></div>
-    <div class="zon sqr abs box rn2"></div>
-    <div class="zon sqr abs box rn2"></div>
-    <div class="zon sqr abs box rn2"></div>
+    <div id="Z00" class="zon sqr abs box rn2 tra"></div>
+    <div id="Z01" class="zon sqr abs box rn2 tra"></div>
+    <div id="Z02" class="zon sqr abs box rn2 tra"></div>
+    <div id="Z03" class="zon sqr abs box rn2 tra"></div>
 
-    <div class="zon sqr abs box rn2"></div>
-    <div class="zon sqr abs box rn2"></div>
-    <div class="zon sqr abs box rn2"></div>
-    <div class="zon sqr abs box rn2"></div>
+    <div id="Z04" class="zon sqr abs box rn2 tra"></div>
+    <div id="Z05" class="zon sqr abs box rn2 tra"></div>
+    <div id="Z06" class="zon sqr abs box rn2 tra"></div>
+    <div id="Z07" class="zon sqr abs box rn2 tra"></div>
 
-    <div class="zon sqr abs box rn2"></div>
-    <div class="zon sqr abs box rn2"></div>
-    <div class="zon sqr abs box rn2"></div>
-    <div class="zon sqr abs box rn2"></div>
+    <div id="Z08" class="zon sqr abs box rn2 tra"></div>
+    <div id="Z09" class="zon sqr abs box rn2 tra"></div>
+    <div id="Z10" class="zon sqr abs box rn2 tra"></div>
+    <div id="Z11" class="zon sqr abs box rn2 tra"></div>
 
-    <div class="zon sqr abs box rn2"></div>
-    <div class="zon sqr abs box rn2"></div>
-    <div class="zon sqr abs box rn2"></div>
-    <div class="zon sqr abs box rn2"></div>
+    <div id="Z12" class="zon sqr abs box rn2 tra"></div>
+    <div id="Z13" class="zon sqr abs box rn2 tra"></div>
+    <div id="Z14" class="zon sqr abs box rn2 tra"></div>
+    <div id="Z15" class="zon sqr abs box rn2 tra"></div>
 
     <!--========================================================================
     -->
@@ -46,7 +46,7 @@
 
     <!--========================================================================
     -->
-    <div id="ball" class="sqr rn2 bd3 box abs bal tr2"></div>
+    <div id="ball" class="sqr rn2 bd3 box abs bal"></div>
 
     <div id="trigger" class="cnt rn2 bd2 sh0 box abs">
       <div class="cnt rn2 bd2 sh1 box">
@@ -65,7 +65,7 @@
         <rect width="6" height="6" x="21" y="18"/>
         <rect width="6" height="6" x="21" y="11"/>
       </svg>
-      <div id="T00" class="sqr abs rn2 sfx"></div>
+      <div id="A00" class="msk abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -75,7 +75,7 @@
         <rect width="6" height="6" x="21" y="25"/>
         <rect width="6" height="6" x="14" y="25"/>
       </svg>
-      <div id="T01" class="sqr abs rn2 sfx"></div>
+      <div id="A01" class="msk abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -85,7 +85,7 @@
         <rect width="6" height="6" x="21" y="18"/>
         <rect width="6" height="6" x="21" y="11"/>
       </svg>
-      <div id="T02" class="sqr abs rn2 sfx"></div>
+      <div id="A02" class="msk abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -95,7 +95,7 @@
         <rect width="6" height="6" x="18" y="25"/>
         <rect width="6" height="6" x="11" y="25"/>
       </svg>
-      <div id="T03" class="sqr abs rn2 sfx"></div>
+      <div id="A03" class="msk abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -105,7 +105,7 @@
         <rect width="6" height="6" x="21" y="25"/>
         <rect width="6" height="6" x="14" y="18"/>
       </svg>
-      <div id="T04" class="sqr abs rn2 sfx"></div>
+      <div id="A04" class="msk abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -115,7 +115,7 @@
         <rect width="6" height="6" x="18" y="11"/>
         <rect width="6" height="6" x="25" y="18"/>
       </svg>
-      <div id="T05" class="sqr abs rn2 sfx"></div>
+      <div id="A05" class="msk abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -125,7 +125,7 @@
         <rect width="6" height="6" x="25" y="18"/>
         <rect width="6" height="6" x="18" y="18"/>
       </svg>
-      <div id="T06" class="sqr abs rn2 sfx"></div>
+      <div id="A06" class="msk abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -135,7 +135,7 @@
         <rect width="6" height="6" x="10" y="22"/>
         <rect width="6" height="6" x="17" y="29"/>
       </svg>
-      <div id="T07" class="sqr abs rn2 sfx"></div>
+      <div id="A07" class="msk abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -145,7 +145,7 @@
         <rect width="6" height="6" x="21" y="14"/>
         <rect width="6" height="6" x="14" y="21"/>
       </svg>
-      <div id="T08" class="sqr abs rn2 sfx"></div>
+      <div id="A08" class="msk abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -155,7 +155,7 @@
         <rect width="6" height="6" x="21" y="21"/>
         <rect width="6" height="6" x="14" y="14"/>
       </svg>
-      <div id="T09" class="sqr abs rn2 sfx"></div>
+      <div id="A09" class="msk abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -165,7 +165,7 @@
         <rect width="6" height="6" x="14" y="21"/>
         <rect width="6" height="6" x="14" y="14"/>
       </svg>
-      <div id="T10" class="sqr abs rn2 sfx"></div>
+      <div id="A10" class="msk abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -175,7 +175,7 @@
         <rect width="6" height="6" x="11" y="21"/>
         <rect width="6" height="6" x="18" y="14"/>
       </svg>
-      <div id="T11" class="sqr abs rn2 sfx"></div>
+      <div id="A11" class="msk abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -185,7 +185,7 @@
         <rect width="6" height="6" x="18" y="22"/>
         <rect width="6" height="6" x="11" y="29"/>
       </svg>
-      <div id="T12" class="sqr abs rn2 sfx"></div>
+      <div id="A12" class="msk abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -195,7 +195,7 @@
         <rect width="6" height="6" x="21" y="22"/>
         <rect width="6" height="6" x="28" y="29"/>
       </svg>
-      <div id="T13" class="sqr abs rn2 sfx"></div>
+      <div id="A13" class="msk abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -205,7 +205,7 @@
         <rect width="6" height="6" x="21" y="14"/>
         <rect width="6" height="6" x="14" y="21"/>
       </svg>
-      <div id="T14" class="sqr abs rn2 sfx"></div>
+      <div id="A14" class="msk abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -215,7 +215,7 @@
         <rect width="6" height="6" x="14" y="14"/>
         <rect width="6" height="6" x="14" y="21"/>
       </svg>
-      <div id="T15" class="sqr abs rn2 sfx"></div>
+      <div id="A15" class="msk abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -225,7 +225,7 @@
         <rect width="6" height="6" x="18" y="14"/>
         <rect width="6" height="6" x="18" y="21"/>
       </svg>
-      <div id="T16" class="sqr abs rn2 sfx"></div>
+      <div id="A16" class="msk abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -235,7 +235,7 @@
         <rect width="6" height="6" x="25" y="25"/>
         <rect width="6" height="6" x="25" y="18"/>
       </svg>
-      <div id="T17" class="sqr abs rn2 sfx"></div>
+      <div id="A17" class="msk abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -245,7 +245,7 @@
         <rect width="6" height="6" x="14" y="21"/>
         <rect width="6" height="6" x="21" y="21"/>
       </svg>
-      <div id="T18" class="sqr abs rn2 sfx"></div>
+      <div id="A18" class="msk abs rn2 sfx"></div>
     </div>
 
     <div class="ath sqr rn2 bd3 box abs cnt btn">
@@ -255,7 +255,7 @@
         <rect width="6" height="6" x="11" y="18"/>
         <rect width="6" height="6" x="18" y="25"/>
       </svg>
-      <div id="T19" class="sqr abs rn2 sfx"></div>
+      <div id="A19" class="msk abs rn2 sfx"></div>
     </div>
 
     <!--========================================================================
@@ -550,26 +550,26 @@
     -->
     <div class="spc flt"></div>
 
-    <div class="bnc sqr flt bd2 box rn2"></div>
-    <div class="bnc sqr flt bd2 box rn2"></div>
-    <div class="bnc sqr flt bd2 box rn2"></div>
-    <div class="bnc sqr flt bd2 box rn2"></div>
-    <div class="bnc sqr flt bd2 box rn2"></div>
-    <div class="bnc sqr flt bd2 box rn2"></div>
-    <div class="bnc sqr flt bd2 box rn2"></div>
-    <div class="bnc sqr flt bd2 box rn2"></div>
-    <div class="bnc sqr flt bd2 box rn2"></div>
-    <div class="bnc sqr flt bd2 box rn2"></div>
-    <div class="bnc sqr flt bd2 box rn2"></div>
-    <div class="bnc sqr flt bd2 box rn2"></div>
-    <div class="bnc sqr flt bd2 box rn2"></div>
-    <div class="bnc sqr flt bd2 box rn2"></div>
-    <div class="bnc sqr flt bd2 box rn2"></div>
-    <div class="bnc sqr flt bd2 box rn2"></div>
-    <div class="bnc sqr flt bd2 box rn2"></div>
-    <div class="bnc sqr flt bd2 box rn2"></div>
-    <div class="bnc sqr flt bd2 box rn2"></div>
-    <div class="bnc sqr flt bd2 box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
+    <div class="bnc sqr flt box rn2"></div>
 
     <!--========================================================================
     -->
@@ -615,9 +615,9 @@
 
     <div id="console" class="cnt flt bd1 box dsp rn1 fml">CONSOLE</div>
 
-    <div id="no" class="cnt yon flt bd1 box dsp rn1 fml tr1"></div>
-    <div id="reset" class="cnt flt bd1 box btn fml tr1">RESET</div>
-    <div id="yes" class="cnt yon flt bd1 box dsp rn1 fml tr1"></div>
+    <div id="no" class="cnt yon flt bd1 box dsp rn1 fml tra"></div>
+    <div id="reset" class="cnt flt bd1 box btn fml tra">RESET</div>
+    <div id="yes" class="cnt yon flt bd1 box dsp rn1 fml tra"></div>
 
   </div><!-- end arena -->
 
@@ -628,6 +628,8 @@
 <script> const o = {} </script>
 
 <script type="text/javascript" src="click.js"></script>
+<script type="text/javascript" src="finish.js"></script>
+<script type="text/javascript" src="handle.js"></script>
 <script type="text/javascript" src="hover.js"></script>
 <script type="text/javascript" src="info.js"></script>
 <script type="text/javascript" src="press.js"></script>
