ENH: further enhancement

--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
 
     <!--========================================================================
     -->
-    <div id="Z00" class="zon sqr abs box rn2 tra"></div>
-    <div id="Z01" class="zon sqr abs box rn2 tra"></div>
-    <div id="Z02" class="zon sqr abs box rn2 tra"></div>
-    <div id="Z03" class="zon sqr abs box rn2 tra"></div>
+    <div id="Z00" class="zon sqr abs box rn2 tr2"></div>
+    <div id="Z01" class="zon sqr abs box rn2 tr2"></div>
+    <div id="Z02" class="zon sqr abs box rn2 tr2"></div>
+    <div id="Z03" class="zon sqr abs box rn2 tr2"></div>
 
-    <div id="Z04" class="zon sqr abs box rn2 tra"></div>
-    <div id="Z05" class="zon sqr abs box rn2 tra"></div>
-    <div id="Z06" class="zon sqr abs box rn2 tra"></div>
-    <div id="Z07" class="zon sqr abs box rn2 tra"></div>
+    <div id="Z04" class="zon sqr abs box rn2 tr2"></div>
+    <div id="Z05" class="zon sqr abs box rn2 tr2"></div>
+    <div id="Z06" class="zon sqr abs box rn2 tr2"></div>
+    <div id="Z07" class="zon sqr abs box rn2 tr2"></div>
 
-    <div id="Z08" class="zon sqr abs box rn2 tra"></div>
-    <div id="Z09" class="zon sqr abs box rn2 tra"></div>
-    <div id="Z10" class="zon sqr abs box rn2 tra"></div>
-    <div id="Z11" class="zon sqr abs box rn2 tra"></div>
+    <div id="Z08" class="zon sqr abs box rn2 tr2"></div>
+    <div id="Z09" class="zon sqr abs box rn2 tr2"></div>
+    <div id="Z10" class="zon sqr abs box rn2 tr2"></div>
+    <div id="Z11" class="zon sqr abs box rn2 tr2"></div>
 
-    <div id="Z12" class="zon sqr abs box rn2 tra"></div>
-    <div id="Z13" class="zon sqr abs box rn2 tra"></div>
-    <div id="Z14" class="zon sqr abs box rn2 tra"></div>
-    <div id="Z15" class="zon sqr abs box rn2 tra"></div>
+    <div id="Z12" class="zon sqr abs box rn2 tr2"></div>
+    <div id="Z13" class="zon sqr abs box rn2 tr2"></div>
+    <div id="Z14" class="zon sqr abs box rn2 tr2"></div>
+    <div id="Z15" class="zon sqr abs box rn2 tr2"></div>
 
     <!--========================================================================
     -->
@@ -615,9 +615,9 @@
 
     <div id="console" class="cnt flt bd1 box dsp rn1 fml">CONSOLE</div>
 
-    <div id="no" class="cnt yon flt bd1 box dsp rn1 fml tra"></div>
-    <div id="reset" class="cnt flt bd1 box btn fml tra">RESET</div>
-    <div id="yes" class="cnt yon flt bd1 box dsp rn1 fml tra"></div>
+    <div id="no" class="cnt yon flt bd1 box dsp rn1 fml tr1"></div>
+    <div id="reset" class="cnt flt bd1 box btn fml tr1">RESET</div>
+    <div id="yes" class="cnt yon flt bd1 box dsp rn1 fml tr1"></div>
 
   </div><!-- end arena -->
 
